1999-03-25  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* poem.el (charset-after): New function.

1999-03-16  Tomohiko Morioka  <morioka@jaist.ac.jp>

	* APEL: Version 9.15 released.

1999-03-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* poe.el (defun-maybe-cond): Don't use `unless'.

1999-03-16  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* EMU-ELS (pcustom-modules): New variable.
	(emu-modules): Add `pcustom-modules'.

1999-03-13  Mikio Nakajima    <minakaji@osaka.email.ne.jp>

	* tinycustom.el: New file.
	* pcustom.el: Likewise.


1999-03-15  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.14 released.

1999-03-11  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mcs-e20.el (charsets-mime-charset-alist): Add setting for
	`tis-620'.

	* mcs-20.el (mime-charset-coding-system-alist): Add `tis-620' and
	`windows-874'.

1999-03-08  SL Baur  <steve@xemacs.org>

	* poem-ltn1.el (find-file-noselect-as-raw-text): Quote.
	(find-file-noselect-as-raw-text-CRLF): Ditto.

1999-03-08  SL Baur  <steve@xemacs.org>

	* mcs-xm.el (decode-mime-charset-region-with-iso646-unification):
	Respect passed in boundaries.
	From MORIOKA Tomohiko <tomo@etl.go.jp>

1999-03-08  SL Baur  <steve@xemacs.org>

	* poe.el (poe): Move provide to the top to avoid circular
	dependency.

	* poe-xemacs.el: Explicitly require poe when bytecompiling.
	* poem-xm.el: Ditto.
	* poem-ltn1.el:Ditto.


1999-02-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL: Version 9.13 released.

1999-02-27  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* Makefile (package): New target.
	(install-package): Depend on `package'.

	* APEL-MK (install-update-package-files): New function.
	(config-apel-package): Load "EMU-ELS".
	(compile-apel-package): New function.
	(install-apel-package): Don't compile modules; use function
	`install-update-package-files'.

1999-02-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* APEL-MK (install-just-print-p): Modify for special option of GNU
	make.
